Actions
Bug #10741
closedufs: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/fs/ufs/ufs_alloc.c: In function 'blkpref': ../../common/fs/ufs/ufs_alloc.c:579:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c: In function 'hashalloc': ../../common/fs/ufs/ufs_alloc.c:884:9: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c: In function 'fragextend': ../../common/fs/ufs/ufs_alloc.c:906:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c:911:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c:919:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c:929:11: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_alloc.c:935:11: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/fs/ufs/ufs_dir.c: In function 'ufs_dircheckforname': ../../common/fs/ufs/ufs_dir.c:1196:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] caching = NULL; ^ ../../common/fs/ufs/ufs_acl.c: In function 'ufs_acl_access': ../../common/fs/ufs/ufs_acl.c:652:28: error: pointer/integer type mismatch in conditional expression [-Werror] sp->aclass.acl_ismask : NULL; ^ ../../common/fs/ufs/ufs_acl.c:651:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] ismask = sp->aclass.acl_ismask ? ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1f563eb1bb0d55d75f9ec2c3776a1ca277707ec4
commit 1f563eb1bb0d55d75f9ec2c3776a1ca277707ec4 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:11:42.000Z 10741 ufs: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions